--- a/style.css
+++ b/style.css
@@ -164,3 +164,25 @@ font-size: 14.0112px;
 line-height: 16px;
 color: #666666;
 }
+
+.partners-button{
+    box-sizing: border-box;
+    width: 195px;
+    height: 43px;
+    background: #FFFFFF;
+    border: 2px solid #FF4E50;
+    font-family: 'Montserrat';
+font-style: normal;
+font-weight: 700;
+font-size: 14px;
+line-height: 17px;
+text-align: center;
+
+color: #FF4E50;
+border-radius: 30px;
+margin-left: auto;
+margin-right: auto;
+display:block;
+margin-top: 37px;
+margin-bottom: 72px;
+}
